[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dr-indexer"
version = "0.1.0"
description = "DigiRails protocol indexer — scans DigiByte for DR OP_RETURN data"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "DigiRails Protocol" }]
dependencies = [
    "aiohttp>=3.9",
    "aiosqlite>=0.19",
]

[project.optional-dependencies]
zmq = ["pyzmq>=25.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff"]

[project.scripts]
dr-indexer = "dr_indexer.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dr_indexer"]

[tool.ruff]
target-version = "py310"
line-length = 100
